# ShipPal

./: LICENSE  README.md
.github/workflows/: deploy-shippal-backend.yml
shippal-backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
shippal-backend/agent/: manager.py  negotiator.py
shippal-backend/api/: chat.py  deals.py
shippal-backend/supabase/: seed.sql
shippal-backend/supabase/migrations/: 20251201014456_initial.sql  20251201020000_add_profile_images.sql  20251201030000_fix_matches_rls.sql  20251201040000_add_matches_update_policy.sql  20251201050000_enable_messages_realtime.sql  20251201060000_enable_matches_realtime.sql  20251201070000_matches_replica_identity.sql  20251202000000_refactor_schema.sql  20251202010000_enhance_compliance_docs.sql  20251202020000_add_deal_total_trigger.sql  20251202030000_add_contacts_insert_policy.sql  20251203094500_enable_realtime_deals.sql  20251203095000_add_sealing_to_enum.sql  20251206190000_add_shipping_columns_to_deals.sql  20251206191500_add_compliance_update_policy.sql  20251206192000_add_completed_to_doc_status.sql
shippal-backend/utils/: supabase_client.py
shippal-frontend/: README.md  components.json  package-lock.json  package.json  proxy.js
shippal-frontend/app/: layout.jsx  page.jsx
shippal-frontend/app/(main)/: layout.jsx  page.jsx
shippal-frontend/app/dashboard/: layout.jsx  loading.jsx  page.jsx
shippal-frontend/app/login/: page.jsx
shippal-frontend/components/: RevealWrapper.jsx  match-dialog.jsx  navbar.jsx  product-modal.jsx  request-modal.jsx  sidebar.jsx
(+49 files in other folders)
